# tarx

./: Cargo.toml  README.md  build.rs
foreign/: go.mod  go.sum  main.go
src/: foreign.rs  main.rs
src/foreign/: include_libforeign.rs
